--- a/playbooks/all.yml
+++ b/playbooks/all.yml
@@ -6,16 +6,9 @@
         repo: ssh://git@github.com/cympfh/dots.git
         dest: $HOME/.dots
         accept_hostkey: yes
-    - name: bin files
-      git:
-        repo: ssh://git@github.com/cympfh/bin.git
-        dest: $HOME/bin
-        accept_hostkey: yes
-    - include_role:
-        name: pyenv
-    - include_role:
-        name: screen
-    - include_role:
-        name: vim
-    - include_role:
-        name: zsh
+  roles:
+    - bin
+    - pyenv
+    - screen
+    - vim
+    - zsh
